[#17446] Junit 6